[package]
name = "cjval2-wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
parking_lot_core = "=0.8.0"

[dependencies.cjval]
path = "../cjval2/"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"